Bug 103902 - Portal 2 game hangs at startup with latest mesa dev
Summary: Portal 2 game hangs at startup with latest mesa dev
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/AMDgpu (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
: 103904 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-11-25 11:59 UTC by fin4478
Modified: 2017-11-26 19:55 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description fin4478 2017-11-25 11:59:13 UTC
When using either Padoka ppa or Oibaf ppa Mesa dev, the Portal 2 game only opens a black screen. If you use the -windowed parameter it will open a black window. Portal 2 game is not as well implemented as Team Fortress 2 (Valve Source engine game too) that works fine. Last messages before hang in ~/.steam/error.log:

CSoundEmitterSystemBase::BaseInit: Manifest 'scripts/game_sounds_manifest.txt' with bogus file type 'new_sound_scripts_must_go_below_here', expecting 'declare_file' or 'precache_file'

Convar r_flashlightscissor has conflicting FCVAR_CHEAT flags (child: no FCVAR_CHEAT, parent: has FCVAR_CHEAT, parent wins)

I have uninstalled and installed the game several times, no help. Portal 2 does work with the Debian testing Mesa:
xfce@ryzen5pc:~/Documents$ glxinfo| grep OpenGL
OpenGL vendor string: X.Org
OpenGL renderer string: AMD POLARIS11 (DRM 3.19.0 / 4.14.0, LLVM 5.0.0)
OpenGL core profile version string: 4.5 (Core Profile) Mesa 17.2.5


I managed to run the game with Padoka ppa one day when I purchased it. Next day after installing the Sanctum 2 game Portal 2 did not work anymore.
OpenGL: renderer: AMD POLARIS11 (DRM 3.19.0 / 4.14.0, LLVM 6.0.0)
version: 4.5 Mesa 17.4.0-devel - padoka PPA

From the Portal 2 game point of view, there might be some regression in Mesa. My system:
xfce@ryzen5pc:~$ inxi -GSCM
System:    Host: ryzen5pc Kernel: 4.14.0 x86_64 bits: 64 Desktop: Xfce 4.12.4
           Distro: Debian GNU/Linux buster/sid
Machine:   Device: desktop Mobo: ASUSTeK model: PRIME B350M-K v: Rev X.0x serial: N/A
           UEFI [Legacy]: American Megatrends v: 0902 date: 09/08/2017
CPU:       Hexa core AMD Ryzen 5 1600 Six-Core (-HT-MCP-) cache: 3072 KB
           clock speeds: max: 3193 MHz 1: 3193 MHz 2: 3193 MHz 3: 3193 MHz
           4: 3193 MHz 5: 3193 MHz 6: 3193 MHz 7: 3193 MHz 8: 3193 MHz
           9: 3193 MHz 10: 3193 MHz 11: 3193 MHz 12: 3193 MHz
Graphics:  Card: Advanced Micro Devices [AMD/ATI] Baffin [Polaris11]
           Display Server: x11 (X.Org 1.19.5 )
           drivers: ati,amdgpu (unloaded: modesetting,fbdev,vesa,radeon)
           Resolution: 1920x1080@60.00hz
           OpenGL: renderer: AMD POLARIS11 (DRM 3.19.0 / 4.14.0, LLVM 5.0.1)
           version: 4.5 Mesa 17.4.0-devel
Comment 1 fin4478 2017-11-25 12:56:18 UTC
I did run the Portal 2 game with gdb and no additional tracing available.
Comment 2 Christoph Haag 2017-11-25 13:13:12 UTC
This will likely help: https://lists.freedesktop.org/archives/mesa-dev/2017-November/177860.html

I think it's not fixed in mesa git master yet.
Comment 3 fin4478 2017-11-25 13:26:10 UTC
(In reply to Christoph Haag from comment #2)
> This will likely help:
> https://lists.freedesktop.org/archives/mesa-dev/2017-November/177860.html
> 
> I think it's not fixed in mesa git master yet.

Thank you very much for the information. It is a big job to revert back to Debian testing Mesa (purging removes a lot of software) so I use Oibaf ppa that updates every day and wait for the the fix.
Comment 4 Kai 2017-11-25 14:02:26 UTC
*** Bug 103904 has been marked as a duplicate of this bug. ***
Comment 5 Kai 2017-11-25 18:55:52 UTC
*** Bug 103904 has been marked as a duplicate of this bug. ***
Comment 6 fin4478 2017-11-26 19:55:42 UTC
Oibaf ppa has above fix for this bug and Portal 2 is working fine.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.